--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,8 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/farm2market
 spring.datasource.username=root
-spring.datasource.password=1248
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.password=12345678
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
