--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/farm2market
 spring.datasource.username=root
-spring.datasource.password=12345678
+spring.datasource.password=qwer1234
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=create
